[package]
name = "rgbox"
version = "0.1.0"
edition = "2021"

[lib]
name = "rgbox_bsp"
path = "src/lib.rs"

[dependencies]
rp-pico = "0.6.0"
embedded-hal = "*"
embedded-graphics = "*"
panic-halt = "*"
cortex-m-rt = {version = "*", optional = true}
cortex-m = "*"
fugit = "*"
nb = "1.0"
usbd-hid = "*"
usbd-serial = "0.1.1"
usb-device = "*"
critical-section = "1.0.0"
heapless = "0.7.9"
rp2040-hal = "*"
ws2812-pio = "0.6.0"
rp2040-boot2 = {version = "0.2.0", optional = true}
smart-leds = "0.3.0"

[features]
# This is the set of features we enable by default
default = ["boot2", "rt", "critical-section-impl", "rom-func-cache"]

boot2 = ["rp2040-boot2"]
rt = ["cortex-m-rt","rp2040-hal/rt"]
rom-func-cache = ["rp2040-hal/rom-func-cache"]
critical-section-impl = ["rp2040-hal/critical-section-impl"]